--- a/hello.html
+++ b/hello.html
@@ -17,5 +17,9 @@
 			Bienvenue dans cette formation GIT !
 		</div>
 		
+		<div>
+		<p>Formation de Git, le gestionnaire de version distribué</p>
+		</div>
+		
 	</body>
 </html>
