--- a/hello.html
+++ b/hello.html
@@ -28,6 +28,12 @@
 		<h1> Mes récompenses </h1>
 		<p>en construction ...</p>
 		</div>
+
+		<!-- GIST -->
+		<div>
+		<h1> Mon gist </h1>
+		<p><script src="https://gist.github.com/AtefBenAribia/1f5cab662e7f66733605e00b0fae1838.js"></script></p>
+		</div>		
 		
 	</body>
 </html>
