--- a/hello.html
+++ b/hello.html
@@ -20,7 +20,7 @@
 		<!-- DESCRIPTION -->
 		<div>
 		<h1> Ma description </h1>
-		<p>Formation de Git, le gestionnaire de version distribué</p>
+		<p><img scr="\images\medal_bronze.png"></p>
 		</div>
 
 		<!-- RECOMPENSE -->
