--- a/hello.html
+++ b/hello.html
@@ -20,13 +20,13 @@
 		<!-- DESCRIPTION -->
 		<div>
 		<h1> Ma description </h1>
-		<p><img scr="\images\medal_bronze.png"></p>
+		<p>Formation de Git, le gestionnaire de version distribué</p>
 		</div>
 
 		<!-- RECOMPENSE -->
 		<div>
 		<h1> Mes récompenses </h1>
-		<p>en construction ...</p>
+		<p><img src="/images/medal_bronze.png"></p>
 		</div>
 
 		<!-- GIST -->
